--- a/package.yaml
+++ b/package.yaml
@@ -21,14 +21,9 @@ description:         Please see the README on Github at <https://github.com/oisd
 
 dependencies:
 - base >= 4.7 && < 5
-- comonad
-- lens
-- free
 - containers
-- semigroupoids
-- mtl
-- profunctors
 - transformers
+- tree-traversals
 
 library:
   source-dirs: src
