--- a/bfs.cabal
+++ b/bfs.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a617a2c97450fa3070295e0b9ff56ff584e7bfd0b5545ce4578646a2b6dea495
+-- hash: 34294e00d1ae634060131d27f43c8bdf436825c31e2668b97e557256366c91a0
 
 name:           bfs
 version:        0.1.0.0
@@ -27,6 +27,7 @@ source-repository head
 library
   exposed-modules:
       Control.Monad.State.Simple
+      Data.Tree.BreadthFirst.Applicative
       Data.Tree.BreadthFirst.Common
       Data.Tree.BreadthFirst.Iterative
       Data.Tree.BreadthFirst.Queued
@@ -38,14 +39,9 @@ library
   ghc-options: -Wall -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
   build-depends:
       base >=4.7 && <5
-    , comonad
     , containers
-    , free
-    , lens
-    , mtl
-    , profunctors
-    , semigroupoids
     , transformers
+    , tree-traversals
   if impl(ghc >= 8.0)
     ghc-options: -fwarn-redundant-constraints -Wcompat
   default-language: Haskell2010
@@ -62,15 +58,10 @@ test-suite bfs-doctests
       QuickCheck
     , base >=4.7 && <5
     , bfs
-    , comonad
     , containers
     , doctest
-    , free
-    , lens
-    , mtl
-    , profunctors
-    , semigroupoids
     , transformers
+    , tree-traversals
   if impl(ghc >= 8.0)
     ghc-options: -fwarn-redundant-constraints -Wcompat
   default-language: Haskell2010
@@ -86,15 +77,10 @@ test-suite bfs-test
   build-depends:
       base >=4.7 && <5
     , bfs
-    , comonad
     , containers
-    , free
     , hedgehog
-    , lens
-    , mtl
-    , profunctors
-    , semigroupoids
     , transformers
+    , tree-traversals
   if impl(ghc >= 8.0)
     ghc-options: -fwarn-redundant-constraints -Wcompat
   default-language: Haskell2010
@@ -110,17 +96,12 @@ benchmark bench
   build-depends:
       base >=4.7 && <5
     , bfs
-    , comonad
     , containers
     , criterion
     , deepseq
-    , free
-    , lens
-    , mtl
-    , profunctors
     , random
-    , semigroupoids
     , transformers
+    , tree-traversals
   if impl(ghc >= 8.0)
     ghc-options: -fwarn-redundant-constraints -Wcompat
   default-language: Haskell2010
